# JustAnotherMD_Editor

./: CMakeLists.txt  README.md
.github/: funding.yml
lib/: prism.js  smol-toml.js
src/: app.manifest  index.html  main.cpp  resource.h  resources.rc
testing_MD/: markdown_test.md  readme_problematic.md  test.md  test_mermaid.md  test_mermaid_stress.md
themes/: dracula.json  gruvbox-dark.json  nord.json  one-dark.json  solarized-dark.json  solarized-light.json  tokyo-night.json
